<resources>
    <string name="app_name">PROJECT_APLIKASI_MOBILE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="report_icon">Report Icon</string>
    <string name="arrow_icon">Arrow Icon</string>

    <string name="galeri">Galeri</string>
    <string name="camera">Camera</string>
    <string name="Submit">Submit</string>
    <string name="Laporan_Perbaikan">Laporan Perbaikan</string>
    <string name="info">Info</string>
    <string name="text_info">Mohon isi Sesuai Temuan</string>
    <string name="feeder">Feeder</string>
    <string name="input_feeder">Masukkan Feeder</string>
    <string name="NoPole">Nomor Tiang</string>
    <string name="input_NoPole">Masukkan Nomor Tiang</string>
    <string name="tipe">Tipe Peralatan</string>
    <string name="input_tipe">Masukkan Tipe Peralatan</string>
    <string name="temuan">Temuan</string>
    <string name="input_temuan">Masukkan Temuan</string>
    <string name="unggah">Unggah Hasil Temuan</string>
    <string name="slider_image">slider_image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>